fix(gnome): fix incorrect control window name on GNOME