@@ -1,1 +1,2 @@
 --enable-preview
+--add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
